# Backend-Foto-Agenda

./: .coverage  .env  README.md  pyproject.toml
FotoAgenda/: app.py
FotoAgenda/config/: __init__.py  variables.py
FotoAgenda/models/: clientModel.py  client_model.py  orders_model.py  pack_services_model.py
FotoAgenda/schemas/: __init__.py  configSchema.py
FotoAgenda/utils/: __init__.py  logger.py
FotoAgenda/utils/api/: __init__.py  delete_item.py  get_all.py  get_by_id.py  not_found_entity.py  patch_item.py  post_items.py
tests/: app_test.py  conftest.py  logger_test.py  main_test.py  utils_api_get_all_test.py
tests/utils/api/: delete_items_test.py  entity_not_found_test.py  get_all_test.py  get_by_id_test.py  patch_item_test.py  post_item_test.py
