[tool.poetry]
name = "FotoAgenda"
version = "0.1.0"
description = ""
authors = ["Everton Fontes <efs.fontes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.3.2"
pydantic = "^1.10.5"
fastapi = "^0.93.0"
tortoise-orm = "^0.19.3"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
uvicorn = "^0.21.0"
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
isort = "^5.12.0"
taskipy = "^1.10.3"
prospector = "^1.9.0"
black = "^23.1.0"


[tool.poetry.group.docs.dependencies]
mkdocstrings = {extras = ["python"], version = "^0.20.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "FotoAgenda"
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "black . && isort . && prospector --with-tool pydocstyle --doc-warning"
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=FotoAgenda -vv"
post_test = "coverage html"